--- a/views/user/emailVerify.ejs
+++ b/views/user/emailVerify.ejs
@@ -42,7 +42,7 @@
                 
                 <div class="resend-container">
                     <a href="#" id="resend-link" >Resend OTP</a>
-                    <input type="hidden" id="remainig" value="<%=remainingTime%>">
+                    <input type="hidden" id="remaining" value="<%=remainingTime%>">
                     <span id="timer">00 : 00 mins</span>
                 </div>
             </div>
