--- a/views/user/orderDetails.ejs
+++ b/views/user/orderDetails.ejs
@@ -127,7 +127,7 @@
                             </tr>
                             <tr>
                               <td>Shipping</td>
-                              <td><%= !order.shippingCharge || order.shippingCharge === 0 ? 'Free' : '₹' + order.shippingCharge.toFixed(2) %></td>
+                              <td><%= !order.shipping || order.shipping === 0 ? 'Free' : '₹' + order.shipping.toFixed(2) %></td>
                             </tr>
                             <tr>
                                 <td>GST (18%)</td>
