--- a/views/user/wallet.ejs
+++ b/views/user/wallet.ejs
@@ -34,7 +34,7 @@
                     <div class="balance-card total">
                         <div class="balance-label">Total Balance</div>
                         <div class="balance-amount">₹ <%= wallet.balance %></div>
-                        <div class="balance-currency"><%= wallet.balance ? 'Available' : 'Unavailabe' %></div>
+                        <div class="balance-currency"><%= wallet.balance ? 'Available' : 'Unavailable' %></div>
                     </div>
                     
                 </div>
