--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -350,12 +350,12 @@
                 </div>
 
                 <!-- Chart Section -->
-                <div class="sales-chart-section" id="salesChartSection">
+                <!-- <div class="sales-chart-section" id="salesChartSection">
                     <h3>Sales Trend</h3>
                     <div class="chart-container">
                         <canvas id="salesChart"></canvas>
                     </div>
-                </div>
+                </div> -->
             </div>
             
             <div class="modal-footer">
